# grebners_basises

./: CMakeLists.txt  README.md
include/grebner_basises/: base_algorithms.hpp  monom.hpp  monom_with_coef.hpp  polynom.hpp  rational.hpp  utils.hpp  var_in_power.hpp
src/: base_algorithms.cpp  monom.cpp  monom_with_coef.cpp  polynom.cpp  rational.cpp  utils.cpp  var_in_power.cpp
tests/: CMakeLists.txt  test_base_algorithms.cpp  test_monom.cpp  test_monom_with_coef.cpp  test_polynom.cpp  test_rational.cpp  test_utils.cpp  test_var_in_power.cpp
